<resources>
    <string name="app_name" translatable="false">Plantasia</string>
    <string name="plantasia_title" translatable="false">Plantasia</string>
    <string name="add_plant">+ Adicionar Planta</string>
    <string name="label_your_plants">Suas Plantas</string>
    <string name="empty_list">Você não adicionou nenhuma planta ainda</string>
    <string name="button_save">Salvar Planta</string>
    <string name="title_activity_new_plant">Adicionar Nova Planta</string>
    <string name="label_plant_name">Nome</string>
    <string name="label_plant_age">Idade (em semanas)</string>
    <string name="label_plant_species">Espécie</string>
    <string name="label_weeks">Semanas</string>
    <string name="error_add_plant">Não foi possível adicionar a planta</string>
    <string name="Common_name_label">Nome comum: %s </string>
    <string name="Cycle_label">Ciclo: %s</string>
    <string name="Watering_label">Rega: %s</string>
    <string name="Indoor_label">Interna:  %s</string>
    <string name="CareLevel_label">Necessidade de cuidado: %s</string>
    <string name="Age_label">Idade: %s semanas</string>
    <string name="labelDetailsAttract">Atrai</string>
    <string name="labelDetailsPropagation">Propagação</string>
    <string name="LabelDetailsSunlight">Luz do sol</string>
    <string name="spinner_placeholder">Escolha a espécie</string>
    <string name="labelDetailsScientificName">Nomes Científicos: %s</string>
    <string name="plant">Planta</string>
    <string name="delete_plant_label">Deletar planta</string>
    <string name="notAvailable">Indisponível</string>
    <string name="descriptionLabel">Descrição: %s</string>
</resources>