<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinkshwhite"
    tools:context=".ui.NewPlantActivity">

    <FrameLayout
        android:id="@+id/semi_circle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/deepgreen"
            android:background="@drawable/half_circle"
            />
    </FrameLayout>


    <TextView
        android:id="@+id/title_add_plant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulish"
        android:layout_marginTop="120sp"
        android:textColor="@color/pinkshwhite"
        android:text="@string/title_activity_new_plant"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/semi_circle" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:hint="@string/label_plant_name"
        android:textColorHint="@color/pinkshwhite"
        android:textColor="@color/pinkshwhite"
        android:fontFamily="@font/mulish"
        android:inputType="text"
        android:minHeight="48sp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/title_add_plant" />

    <EditText
        android:id="@+id/age_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:textColorHint="@color/pinkshwhite"
        android:textColor="@color/pinkshwhite"
        android:hint="@string/label_plant_age"
        android:fontFamily="@font/mulish"
        android:inputType="number"
        android:minHeight="48sp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/name_edittext"/>

    <Spinner
        android:id="@+id/species_spinner"
        android:minHeight="48sp"
        android:textSize="18sp"
        android:layout_margin="16sp"
        android:layout_width="match_parent"
        android:spinnerMode="dropdown"
        android:backgroundTint="@color/mediumgreen"
        app:layout_constraintStart_toStartOf="@id/name_edittext"
        app:layout_constraintTop_toBottomOf="@id/age_edittext"
        android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/errorAddPlantCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            app:cardCornerRadius="8sp"
            android:backgroundTint="@color/mediumgreen"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/button_save"
            app:layout_constraintStart_toStartOf="@id/name_edittext">

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/attention"
                    android:layout_width="40sp"
                    android:layout_height="40sp"
                    android:layout_margin="10sp"
                    app:tint="@color/pinkshwhite"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/baseline_error_outline_24" />

                <TextView
                    android:layout_toEndOf="@id/attention"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:layout_marginTop="8sp"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/mulish"
                    android:textColor="@color/pinkshwhite"
                    android:text="@string/error_add_plant" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/mulish"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/button_save"/>

</androidx.constraintlayout.widget.ConstraintLayout>